package com.acme.auto.rest;

import com.acme.auto.entity.Auto;
import com.acme.auto.entity.Besitzer;
import com.acme.auto.entity.FeatureType;
import com.acme.auto.entity.MarkeType;
import lombok.EqualsAndHashCode;
import lombok.Getter;
import lombok.Setter;
import lombok.ToString;
import org.springframework.hateoas.RepresentationModel;
import org.springframework.hateoas.server.core.Relation;
import java.math.BigDecimal;
import java.net.URI;
import java.util.List;
import java.util.UUID;

/**
 * Model-Klasse für Spring HATEOAS, um Links im Response-Body hinzuzufügen
 */
@Relation(collectionRelation = "autos", itemRelation = "auto")
@EqualsAndHashCode(onlyExplicitlyIncluded = true, callSuper = false)
@Getter @Setter
@ToString(callSuper = true)
class AutoModel extends RepresentationModel<AutoModel> {
    private final UUID autohausId;
    private final String name;
    private final MarkeType marke;

    @EqualsAndHashCode.Include
    private final String kennzeichen;

    private int pferdeStaerke;
    private BigDecimal preis;
    private List<FeatureType> features;
    private Besitzer besitzer;

    private String autohausName;
    private URI autohausHomepage;

    AutoModel(final Auto auto) {
        autohausId = auto.getAutohausId();
        name = auto.getName();
        marke = auto.getMarke();
        kennzeichen = auto.getKennzeichen();
        pferdeStaerke = auto.getPferdeStaerke();
        preis = auto.getPreis();
        features = auto.getFeatures();
        besitzer = auto.getBesitzer();
        autohausName = auto.getAutohausName();
        autohausHomepage = auto.getAutohausHomepage();
    }
}
